--- a/snippets/header-logo-block.liquid
+++ b/snippets/header-logo-block.liquid
@@ -50,7 +50,8 @@
   {% comment %}
     .logo--has-inverted is only applied to the default logo if the inverted logo exists. That way it'll only be hidden on the slider when it has a backup.
   {% endcomment %}
-  <a
+    {% comment %}
+    <a
     href="{{ routes.root_url }}"
     itemprop="url"
     class="site-header__logo-link{% if section.settings.logo-inverted %} logo--has-inverted{% endif %}"
@@ -66,6 +67,23 @@
       src="{{ 'logo-header-text-only.svg' | asset_url }}"
       srcset="{{ section.settings.logo | img_url: header_logo_size_mobile }} 1x, {{ section.settings.logo | img_url: header_logo_size_mobile, scale: 2 }} 2x"
       alt="{{ section.settings.logo.alt | default: shop.name }}">
+  </a>
+  {% endcomment %}
+  <a
+    href="{{ routes.root_url }}"
+    itemprop="url"
+    class="site-header__logo-link{% if section.settings.logo-inverted %} logo--has-inverted{% endif %}"
+    style="padding-top: {{ 100 | divided_by: section.settings.logo.aspect_ratio }}%">
+    <img
+    class="small--hide"
+    src="{{ 'logo-header-text-only.svg' | asset_url }}"
+    alt="{{ shop.name }}"
+    itemprop="logo">
+    <img
+    class="medium-up--hide"
+      src="{{ 'logo.svg' | asset_url }}"
+      alt="{{ shop.name }}"
+      itemprop="logo">
   </a>
   {%- if section.settings.logo-inverted -%}
     <a
