--- a/snippets/header-logo-block.liquid
+++ b/snippets/header-logo-block.liquid
@@ -93,14 +93,14 @@
       style="padding-top: {{ 100 | divided_by: section.settings.logo.aspect_ratio }}%">
       <img
         class="small--hide"
-        src="{{ section.settings.logo-inverted | img_url: header_logo_size }}"
-        srcset="{{ section.settings.logo-inverted | img_url: header_logo_size }} 1x, {{ section.settings.logo-inverted | img_url: header_logo_size, scale: 2 }} 2x"
+        src="{{ 'logo-header-text-only.svg' | asset_url }}"
+        
         alt="{{ section.settings.logo-inverted.alt | default: shop.name }}"
         itemprop="logo">
       <img
         class="medium-up--hide"
-        src="{{ section.settings.logo-inverted | img_url: header_logo_size_mobile }}"
-        srcset="{{ section.settings.logo-inverted | img_url: header_logo_size_mobile }} 1x, {{ section.settings.logo-inverted | img_url: header_logo_size_mobile, scale: 2 }} 2x"
+        src="{{ 'logo-header-text-only.svg' | asset_url }}"
+      
         alt="{{ section.settings.logo.alt | default: shop.name }}">
     </a>
   {%- endif -%}
