--- a/snippets/header-logo-block.liquid
+++ b/snippets/header-logo-block.liquid
@@ -50,67 +50,49 @@
   {% comment %}
     .logo--has-inverted is only applied to the default logo if the inverted logo exists. That way it'll only be hidden on the slider when it has a backup.
   {% endcomment %}
-    {% comment %}
-    <a
-    href="{{ routes.root_url }}"
-    itemprop="url"
-    class="site-header__logo-link{% if section.settings.logo-inverted %} logo--has-inverted{% endif %}"
-    style="padding-top: {{ 100 | divided_by: section.settings.logo.aspect_ratio }}%">
-    <img
-      class="small--hide"
-      src="{{'logo-header-text-only.svg' | asset_url }}"
-      srcset="{{ section.settings.logo | img_url: header_logo_size }} 1x, {{ section.settings.logo | img_url: header_logo_size, scale: 2 }} 2x"
-      alt="{{ section.settings.logo.alt | default: shop.name }}"
-      itemprop="logo">
-    <img
-      class="medium-up--hide"
-      src="{{ 'logo-header-text-only.svg' | asset_url }}"
-      srcset="{{ section.settings.logo | img_url: header_logo_size_mobile }} 1x, {{ section.settings.logo | img_url: header_logo_size_mobile, scale: 2 }} 2x"
-      alt="{{ section.settings.logo.alt | default: shop.name }}">
-  </a>
-  {% endcomment %}
+  <a
+  href="{{ routes.root_url }}"
+  itemprop="url"
+  class="site-header__logo-link{% if section.settings.logo-inverted %} logo--has-inverted{% endif %}"
+  style="padding-top: {{ 100 | divided_by: section.settings.logo.aspect_ratio }}%">
+  <img
+    class="small--hide"
+    src="{{ section.settings.logo | img_url: header_logo_size }}"
+    srcset="{{ section.settings.logo | img_url: header_logo_size }} 1x, {{ section.settings.logo | img_url: header_logo_size, scale: 2 }} 2x"
+    alt="{{ section.settings.logo.alt | default: shop.name }}"
+    itemprop="logo">
+  <img
+    class="medium-up--hide"
+    src="{{ section.settings.logo | img_url: header_logo_size_mobile }}"
+    srcset="{{ section.settings.logo | img_url: header_logo_size_mobile }} 1x, {{ section.settings.logo | img_url: header_logo_size_mobile, scale: 2 }} 2x"
+    alt="{{ section.settings.logo.alt | default: shop.name }}">
+</a>
+{%- if section.settings.logo-inverted -%}
   <a
     href="{{ routes.root_url }}"
     itemprop="url"
-    class="site-header__logo-link{% if section.settings.logo-inverted %} logo--has-inverted{% endif %}"
+    class="site-header__logo-link logo--inverted"
     style="padding-top: {{ 100 | divided_by: section.settings.logo.aspect_ratio }}%">
     <img
-    class="small--hide"
-    src="{{ 'logo-header-text-only.svg' | asset_url }}"
-    alt="{{ shop.name }}"
-    itemprop="logo">
-    <img
-    class="medium-up--hide"
-      src="{{ 'logo.svg' | asset_url }}"
-      alt="{{ shop.name }}"
+      class="small--hide"
+      src="{{ section.settings.logo-inverted | img_url: header_logo_size }}"
+      srcset="{{ section.settings.logo-inverted | img_url: header_logo_size }} 1x, {{ section.settings.logo-inverted | img_url: header_logo_size, scale: 2 }} 2x"
+      alt="{{ section.settings.logo-inverted.alt | default: shop.name }}"
       itemprop="logo">
+    <img
+      class="medium-up--hide"
+      src="{{ section.settings.logo-inverted | img_url: header_logo_size_mobile }}"
+      srcset="{{ section.settings.logo-inverted | img_url: header_logo_size_mobile }} 1x, {{ section.settings.logo-inverted | img_url: header_logo_size_mobile, scale: 2 }} 2x"
+      alt="{{ section.settings.logo.alt | default: shop.name }}">
   </a>
-  {%- if section.settings.logo-inverted -%}
-    <a
-      href="{{ routes.root_url }}"
-      itemprop="url"
-      class="site-header__logo-link logo--inverted"
-      style="padding-top: {{ 100 | divided_by: section.settings.logo.aspect_ratio }}%">
-      <img
-        class="small--hide"
-        src="{{ 'logo-header-text-only.svg' | asset_url }}"
-        
-        alt="{{ section.settings.logo-inverted.alt | default: shop.name }}"
-        itemprop="logo">
-      <img
-        class="medium-up--hide"
-        src="{{ 'logo-header-text-only.svg' | asset_url }}"
-      
-        alt="{{ section.settings.logo.alt | default: shop.name }}">
-    </a>
-  {%- endif -%}
+{%- endif -%}
 {%- else -%}
-  <a href="{{ routes.root_url }}" itemprop="url">{{ shop.name }}</a>
+<a href="{{ routes.root_url }}" itemprop="url">{{ shop.name }}</a>
 {%- endif -%}
 {%- if template == 'index' -%}
-  </h1>
+</h1>
 {%- else -%}
-  </div>
+</div>
 {%- endif -%}
 
 
