--- a/snippets/header-icons.liquid
+++ b/snippets/header-icons.liquid
@@ -13,6 +13,11 @@
       </a>
     {% endif %}
 
+  
+
+    {% comment %}
+    //TODO: Remove this soltion and turn off search in theme settings
+      //CHANGE:hid search icon in header 
     {% if settings.search_enable %}
       <a href="{{ routes.search_url }}" class="site-nav__link site-nav__link--icon js-search-header js-no-transition{% if section.settings.main_menu_alignment == 'center' or section.settings.main_menu_alignment == 'center-split' %} large-up--hide{% endif %}">
         <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-search" viewBox="0 0 64 64"><path d="M47.16 28.58A18.58 18.58 0 1 1 28.58 10a18.58 18.58 0 0 1 18.58 18.58zM54 54L41.94 42"/></svg>
