--- a/snippets/header-icons.liquid
+++ b/snippets/header-icons.liquid
@@ -24,6 +24,7 @@
         <span class="icon__fallback-text">{{ 'general.search.title' | t }}</span>
       </a>
     {% endif %}
+    {% endcomment %}
 
     {% if section.settings.main_menu_alignment == 'left' or section.settings.main_menu_alignment == 'left-center' or section.settings.main_menu_alignment == 'left-drawer' %}
       <button
